# InQuIR

./: .gitignore  Cargo.toml  README.md  gen_table.py  run_benchmark.sh
compiler/: Cargo.toml
compiler/src/: codegen.rs  dependency_graph.rs  lib.rs  main.rs  metrics.rs
compiler/src/arch/: configuration.rs  mod.rs  node_info.rs
compiler/src/codegen/: allocation.rs  always_rcx.rs  convert_graph.rs  decomposer.rs
compiler/src/codegen/routing/: mod.rs  router.rs  teledata_only.rs  telegate_only.rs
compiler/src/graph/: mod.rs
compiler/src/graph/algo/: dijkstra.rs  mod.rs
compiler/src/hir/: ast.rs  mod.rs
compiler/src/optimizer/: mod.rs  quasi_parallel.rs  standardize.rs  vectorize.rs
compiler/src/parser/: mod.rs  qasm2.rs  util.rs
compiler/src/simulation/: comm_buffer.rs  evaluation_cost.rs  latency.rs  mod.rs  participant.rs  shared_memory.rs  simulator.rs
compiler/src/utils/: fresh_ids.rs  mod.rs
config/: 1x2.json  1x3-linear.json  1x4-linear.json  2x8-cube.json  2x8x1-linear.json  2x8x4-linear.json  2x9-torus.json  4x4-2-linear.json  4x4-3-linear.json  4x4-4-linear.json  4x4-linear.json  4x5-2-linear.json  4x5-linear.json  8x8.json
graph/src/: graph.rs  lib.rs
graph/src/algo/: dijkstra.rs  mod.rs  toposort.rs
inquir/: Cargo.toml
inquir/src/: ast.rs  bexp.rs  lib.rs
inquir/src/ast/: expr.rs  mod.rs  primitive_gate.rs  process.rs  system.rs
inquir/src/metrics/: mod.rs
qiskit/: partition.py  sample_qc.py
scripts/: plot_timestamp.py
src/: ast.rs  main.rs  mod.rs
src/metrics/: mod.rs
tests/: swap_test.qasm
