[package]
name = "inqcc"
authors = ["Ryo Wakizaka <ryo.wakizaka516@gmail.com>"]
description = "The compiler for the InQuIR programming language"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
itertools = "0.10.2"
inquir = { path = "../inquir" }
graph = { path = "../graph" }
indicatif = "0.17"
